# Squirrel-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gitattributes
Squirrel-Engine/: CMakeLists.txt
Squirrel-Engine/include/: AINode.h  AU_Interface.h  ActionNode.h  Actor.h  ActorComponent.h  Application.h  AssetDatabase.h  Audio.h  AudioConfig.h  BehaviorTree.h  Blackboard.h  Buffer.h  Camera.h  Configuration.h  ControlSchema.h  Core.h  DecoratorNode.h  DrawCall.h  DummyScheduler.h  DynamicLightManager.h  EAINode.h  EActionStatus.h  EAudioEngine.h  ED_Engine.h  ED_Interface.h  ED_Rendering.h  EGraphicAPI.h  EJobStage.h  EPlatform.h  EQueueOrder.h  ERenderer.h  EScheduler.h  Ear.h  EditorCamera.h  EntryPoint.h  Fur.h  FurStore.h  GM_Interface.h  IConfig.h  IConfigurator.h  (+71 more)
Squirrel-Engine/include/OpenGL/: OpenGLBuffer.h  OpenGLVertexArray.h
Squirrel-Engine/include/RenderObject/: Buffer.h  IndexBuffer.h  RenderObject.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Squirrel-Engine/include/glad/: glad.h
Squirrel-Engine/include/headers/: AINode.h  AU_Interface.h  Actor.h  ActorComponent.h  Audio.h  BehaviorTree.h  Blackboard.h  Configuration.h  ControlSchema.h  DecoratorNode.h  DirectionalLight.h  DynamicLightManager.h  EAINode.h  EAudioEngine.h  EJobStage.h  EScheduler.h  Ear.h  EntryPoint.h  Fur.h  FurStore.h  IP_Interface.h  InputStore.h  Instrumentor.h  JSONParser.h  LevelStore.h  LightObject.h  MT_Interface.h  Material.h  Mesh.h  Model.h  NJ_ActorWorker.h  NJ_InitializeSimulation.h  NotImplementedSchedulerException.h  Nut.h  PointLight.h  RD_Interface.h  RM_Interface.h  RenderConfig.h  Renderer.h  RuntimeManager.h  (+13 more)
Squirrel-Engine/lib/assimp/: assimp-vc142-mtd.exp  assimp-vc142-mtd.lib
Squirrel-Engine/lib/assimp/code/: CMakeLists.txt
Squirrel-Engine/lib/glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLAD.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  glad-generate-files.vcxproj  glad-generate-files.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters
Squirrel-Engine/lib/glad/Debug/: glad.lib
Squirrel-Engine/lib/glad/src/: glad.c
Squirrel-Engine/lib/glfw/src/: context.c  egl_context.c  egl_context.h  init.c  input.c  (+17 more)
Squirrel-Engine/res/models/: Cube.fbx  Skydome.fbx  Statue.fbx  TestBoxes.mtl  Wall.fbx  WallOBJ.mtl  girl1.fbx  girl2.fbx
Squirrel-Engine/res/shaders/: Basic.shader  Environment.shader  LightSource.shader  Model.shader  SKShader.shader
Squirrel-Engine/src/: InputStore.cpp  Mesh.cpp  Model.cpp  glad.c
Squirrel-Engine/src/AI/: ActionNode.cpp  BehaviorTree.cpp  Blackboard.cpp  SelectionNode.cpp  SequenceNode.cpp
Squirrel-Engine/src/AU_Interface/: AU_Interface.cpp  AudioConfig.cpp
Squirrel-Engine/src/Animation/: SkeletalMesh.cpp  SkeletalModel.cpp
Squirrel-Engine/src/Assets/: AssetDatabase.cpp
Squirrel-Engine/src/Audio/: AU_Interface.cpp
Squirrel-Engine/src/Core/: Application.cpp  InterfaceFactory.cpp  RuntimeManager.cpp
Squirrel-Engine/src/DummyScheduler/: DummyScheduler.cpp  Job.cpp
Squirrel-Engine/src/ECS/: Actor.cpp  ActorComponent.cpp
Squirrel-Engine/src/ED_Interface/: ED_Engine.cpp  ED_Rendering.cpp
Squirrel-Engine/src/Ear/: Audio.cpp  Ear.cpp
Squirrel-Engine/src/Engine-Subsystems/: RuntimeManager.cpp
Squirrel-Engine/src/Fur/: EditorCamera.cpp  Fur.cpp  FurStore.cpp  RenderConfig.cpp  RenderOptions.cpp  Renderer.cpp
Squirrel-Engine/src/GM_Interface/: GM_Interface.cpp  LevelStore.cpp
Squirrel-Engine/src/Game Manager/: DynamicLightManager.cpp  GM_Interface.cpp  LevelStore.cpp
Squirrel-Engine/src/IP_Interface/: IP_Interface.cpp
Squirrel-Engine/src/Input/: IP_Interface.cpp  InputStore.cpp
Squirrel-Engine/src/Job System/: J_Window_CreateWindow.cpp  J_Window_RenderWindow.cpp  Job.cpp  JobFactory.cpp  JobQueue.cpp
Squirrel-Engine/src/MT_Interface/: MT_Interface.cpp
Squirrel-Engine/src/Math/: Vector2.cpp  Vector3.cpp
Squirrel-Engine/src/Mock/: MockStateManager.cpp
Squirrel-Engine/src/Nut/: NJob.cpp  Nut.cpp
Squirrel-Engine/src/OpenGL/: OpenGLBuffer.cpp  OpenGLVertexArray.cpp
Squirrel-Engine/src/RD_Interface/: Material.cpp  Mesh.cpp  RD_Interface.cpp
Squirrel-Engine/src/RM_Interface/: RM_Interface.cpp
Squirrel-Engine/src/Render/: RD_Interface.cpp
Squirrel-Engine/src/RenderObject/: Buffer.cpp  DrawCall.cpp  IndexBuffer.cpp  Light.cpp  LightDrawCall.cpp  LightObject.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelDrawCall.cpp  RenderObject.cpp  Shaders.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
Squirrel-Engine/src/Resource/: Material.cpp  Mesh.cpp  Model.cpp  RM_Interface.cpp  Shaders.cpp  Texture.cpp
Squirrel-Engine/src/Scheduler/: MT_Interface.cpp  Scheduler.cpp
Squirrel-Engine/src/Squirrel/: Application.cpp
Squirrel-Engine/src/Store/: LevelStore.cpp  Store.cpp  StoreManager.cpp
Squirrel-Engine/src/Utilities/: Configuration.cpp  JSONConfigurator.cpp  JSONParser.cpp  OBJ_Loader.cpp  RenderConfig.cpp  SchedulerConfig.cpp  StringUtilities.cpp  TextureLoader.cpp  Timer.cpp  Utilities.cpp
Squirrel-Engine/src/configs/: audioConfig.json  renderConfig.json  schedulerConfig.json
Squirrel-Game/: CMakeLists.txt  Squirrel-Game.cpp  Squirrel-Game.h
Squirrel-Game/include/: Camera.h  Light.h  Macros.h  Player.h  Skeleton.h  Squirrel-Game.h
Squirrel-Game/include/Components/: AIComponent.h  AudioComponent.h  CameraComponent.h  LightComponent.h  RenderComponent.h  TransformComponent.h
Squirrel-Game/include/ControlSchema/: TestControlSchema.h
Squirrel-Game/include/SkeletonAI/: SampleDecorator.h  SampleSequence.h  SkeletonBT.h  WalkToDoorAction.h
Squirrel-Game/src/: AIComponent.cpp  AudioComponent.cpp  Camera.cpp  CameraComponent.cpp  Light.cpp  LightComponent.cpp  Player.cpp  RenderComponent.cpp  SampleDecorator.cpp  SampleSequence.cpp  Skeleton.cpp  SkeletonBT.cpp  Squirrel-Game.cpp  TestControlSchema.cpp  TransformComponent.cpp  WalkToDoorAction.cpp
Squirrel-Launcher/: CMakeLists.txt  glad.h  main.cpp  mainwindow.ui
test/: CMakeLists.txt  ExampleTests.cpp  StringUtilities_test.cpp  Vector2_test.cpp  Vector3_test.cpp
(+99 files in other folders)
